<resources>
    <string name="app_name">GADS Leaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="gads_logo">GADS Logo</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="failed">Submission Not Successful</string>
    <string name="questionMark">\?</string>
    <string name="ImageViewCancel">cancel</string>
    <string name="iq">IQ</string>
    <string name="textview">TextView</string>
    <string name="top_learner">top_learner</string>
    <string name="project_submission">Project Submission</string>
</resources>