<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ProjectSubmit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_marginTop="50dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="675dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/abc_vector_test">

        <ImageView
            android:id="@+id/tv_header_title"
            android:layout_width="290dp"
            android:layout_height="?actionBarSize"
            android:layout_gravity="end"
            android:src="@drawable/gads"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="11dp"
            android:contentDescription="@string/gads_logo" />
        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="8sp"
            android:text="@string/project_submission"
            android:textAlignment="center"
            android:textColor="@color/colorOrange"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editTextFname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:hint="@string/first_name"
                android:padding="16dp"
        />

            <EditText
                android:id="@+id/editTextLname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:hint="@string/last_name"
                android:padding="16dp" />


        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded"
            android:hint="@string/email_address"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextLink"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded"
            android:hint="@string/project_on_github_link"
            android:padding="16dp" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="198dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_orange"
            android:padding="8dp"
            android:text="@string/submit"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>