<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="false">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/ImageViewCancel"
            android:layout_width="29dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="234dp"
            android:contentDescription="@string/ImageViewCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_cancel_24" />

        <TextView
            android:id="@+id/text_view_are_you_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="108dp"
            android:text="@string/are_you_sure"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_question_mark"
            android:layout_width="31dp"
            android:layout_height="39dp"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/questionMark"
            app:layout_constraintStart_toEndOf="@+id/text_view_are_you_sure"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_help"
            app:tint="#000000" />

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="134dp"
            android:layout_height="54dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:radius="8dp"
            android:text="@string/yes"

            android:textAllCaps="false"
            android:textColor="@color/colorOrange"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:strokeWidth="4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

